--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   ],
   "require": {
     "php": ">=5.5",
-    "aws/aws-sdk-php": "3.2.*@stable"
+    "aws/aws-sdk-php": "3.2.*@stable",
+    "mtdowling/cron-expression": "1.0.*@stable"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "2.3.*@stable",
