--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ php:
   - 5.6
 
 before_script:
+  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - composer self-update
-  - composer install --no-interaction --dev
+  - composer install --no-interaction
 
 script:
   - vendor/bin/codecept run unit
