--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ php:
   - 5.5
   - 5.6
 
+services:
+  - memcached
+
 before_script:
   - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - composer self-update
